[package]
name = "work-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
shellexpand = "3"
html-escape = "0.2"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
